Fix overflow

--- a/assets/style.less
+++ b/assets/style.less
@@ -80,7 +80,8 @@ html, body {
 }
 
 .custom-overflow {
-  overflow: scroll;
+  overflow-x: hidden; 
+  overflow-y: scroll;
 }
 
 .visibility-hidden {
@@ -137,7 +138,6 @@ html, body {
   z-index: 1;
   color : white;
   padding: 50px 0px;
-  overflow : scroll;
   .content-outer__info-container {
     .content-sub-text {
       margin-top: 30px;
@@ -239,5 +239,21 @@ html, body {
   }
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
 
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: black; 
+  border-radius : 10px;
+  border : 1px solid #555;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #111; 
+}
 
